# dynavolt

./: .gitignore  LICENSE  README.md  app.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
api/: .env.example  .gitignore  .vercelignore  Cargo.toml  vercel.json
api/api/: index.rs
api/migrations/: 0001_init.sql  0002_user_names.sql  0003_device_config.sql  0004_meter_fields.sql  0005_alert_degree_sign.sql  0006_timestamps.sql  0007_push_tokens.sql  0008_usernames.sql  0009_alert_message_sentence_case.sql  0010_source_mode.sql  0011_nullable_readings.sql  0012_wifi_networks.sql  0013_drop_humidity.sql  0014_device_telemetry.sql
api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  page.rs  search.rs  state.rs  time.rs
api/src/alerts/: model.rs  routes.rs  service.rs
api/src/auth/: extract.rs  jwt.rs  mod.rs  password.rs  routes.rs
api/src/device/: model.rs  routes.rs  service.rs
api/src/notifications/: model.rs  routes.rs  service.rs
api/src/readings/: mod.rs  model.rs  routes.rs  service.rs  simulate.rs  units.rs
api/src/settings/: model.rs  routes.rs  service.rs
api/src/users/: model.rs  routes.rs  service.rs
app/: .easignore  .env.example  .gitignore  app.json  eas.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/scripts/: build-katex-assets.mjs
app/src/: global.css
app/src/app/: _layout.tsx  index.tsx  login.tsx  users.tsx
app/src/app/(tabs)/: _layout.tsx  alerts.tsx  dashboard.tsx  logs.tsx  profile.tsx  settings.tsx
app/src/components/: about-modal.tsx  appearance-modal.tsx  bottom-sheet.tsx  confirm-modal.tsx  formula.tsx  info-modal.tsx  source-mode-modal.tsx  tab-icon.tsx  theme-toggle.tsx
app/src/components/ac/: alert-skeleton.tsx  device-card.tsx  log-skeleton.tsx  metric-card.tsx  power-panel.tsx  source-badge.tsx
app/src/components/ui/: empty-state.tsx  icon-input.tsx  pager.tsx  search-field.tsx  segmented.tsx  skeleton.tsx
app/src/features/alerts/: api.ts  types.ts
app/src/features/auth/: api.ts  context.tsx  greeting.ts  types.ts
app/src/features/device/: api.ts  types.ts
app/src/features/notifications/: context.tsx  push.ts
app/src/features/readings/: api.ts  types.ts
app/src/features/settings/: api.ts  types.ts
app/src/features/users/: api.ts  types.ts
app/src/hooks/: use-ac-simulation.ts  use-debounced.ts  use-poll.ts
app/src/lib/: api-client.ts  appearance.tsx  datetime.ts  pagination.ts  reading-format.ts  theme.ts
esp32/: esp32.ino  pins.txt  secrets.example.h  structure.txt  test.h
esp32/functions/: main.h  net.h
esp32/src/config/: Device.h  Pins.h
esp32/src/core/: Main.h  Monitor.h
esp32/src/hardware/: EnergyMeter.h  Lcd.h  Relay.h  TemperatureProbe.h
esp32/src/net/: BackendClient.h  WifiLink.h
esp32/src/tests/: Ds18b20Test.h  LcdTest.h  NetTest.h  PzemTest.h
esp32/tests/: ds18b20_test.h  net_test.h  test.h
src/app/: _layout.tsx
src/components/: appearance-modal.tsx  bottom-sheet.tsx  info-modal.tsx
src/components/ac/: waveform.tsx
src/lib/: katex-assets.ts
