[package]
name = "dynavolt-api"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
default-run = "dynavolt-api"

# Local development server.
[[bin]]
name = "dynavolt-api"
path = "src/main.rs"

# Vercel serverless function. Each handler in api/ must be its own binary.
[[bin]]
name = "index"
path = "api/index.rs"

# The account seeder lives at src/bin/seed.rs and is auto-discovered by cargo.
# It is deliberately not declared here and not committed: it holds real passwords,
# and this repo is public. Declaring it would break `cargo build` on a fresh clone,
# where the file is absent.

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
password-hash = { version = "0.5", features = ["getrandom"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls-no-provider"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.4", features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.24.0", features = ["serde", "v4"] }
vercel_runtime = { version = "=2.3.0", features = ["axum"] }
